# hh-parser

./: .gitignore  cli.py  config.yaml  main.py  pyproject.toml  readme.md  requirements.txt  roles.json
alembic/: env.py
alembic/versions/: b40d99a2cc76_initial_migration.py
src/: db.py  loaders.py  model.py  models.py  parsers.py  parsing.py  utils.py
